# ccvm

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/vm/ClassFile/: AccessFlag.cpp  AccessFlag.h  ClassFile.cpp  ClassFile.h  FileReader.cpp  FileReader.h  JavaClass.cpp  JavaClass.h  JavaClassLoader.cpp  JavaClassLoader.h  JavaType.cpp  JavaType.h
src/vm/Runtime/: JClass.cpp  JClass.h  JException.cpp  JException.h  JType.cpp  JType.h
src/vm/Runtime/JException/: JExceptions.cpp  JExceptions.h
src/vm/Runtime/JRuntiemEnv/: JRuntimeEnv.cpp  JRuntimeEnv.h
src/vm/Runtime/JavaTypes/: JArray.cpp  JArray.h  JObject.cpp  JObject.h  JType.h
src/vm/Runtime/NativeMethods/: NativeMethods.cpp  NativeMethods.h
src/vm/interpreter/: ByteCode.h  ByteCodeInterpreter.cpp  ByteCodeInterpreter.h  Operations.cpp  Operations.h  SymbloicRef.cpp  SymbloicRef.h
src/vm/memory/: JFrame.cpp  JFrame.h  JHeap.cpp  JHeap.h  JNativeMethodStack.cpp  JNativeMethodStack.h  MethodArea.cpp  MethodArea.h
src/vm/misc/: Utils.cpp  Utils.h
